# moonbit-mlir

./: .gitignore  CMakeLists.txt  README.md  make.py
lib/: CMakeLists.txt
lib/codegen/: CGModule.cpp  CGModule.h  CMakeLists.txt
lib/dialect/: CMakeLists.txt  MoonDialect.cpp  MoonDialect.h  MoonDialect.td  MoonOps.cpp  MoonOps.h  MoonOps.td  MoonTypes.h  MoonTypes.td
lib/main/: CMakeLists.txt  main.cpp
lib/parse/: ASTNode.cpp  ASTNode.h  CMakeLists.txt  Identifier.cpp  Identifier.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h
lib/sema/: CMakeLists.txt  Sema.cpp  Sema.h  TypeContext.h  Types.cpp  Types.h
lib/transforms/: CMakeLists.txt  FPtrResolution.cpp  LLVMLowering.cpp  LLVMLowering.h  LowerIntrinsic.cpp  MIRToLLVM.cpp  MoonPasses.cpp  MoonPasses.h  RemoveUnit.cpp
lib/utils/: CLIParser.cpp  CLIParser.h  CMakeLists.txt  Common.h  Diagnostics.cpp  Diagnostics.h  Utils.h
test/: basic.mbt  loops.mbt  mutable.mbt  structs.mbt
